[package]
name = "freighter"
version = "0.1.0"
authors = ["zhuhaow <zhuhaow@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.2.0-alpha.1"
hyper = { git = "https://github.com/hyperium/hyper" }
trust-dns-resolver = "^0.12"
futures-preview = { version = "0.3.0-alpha.17", features = ["compat"] }
http = "^0.1"

[lib]
crate-type = ["lib", "staticlib"]

[workspace]
members = ["specht2"]
