[package]
name = "freighter"
version = "0.1.0"
authors = ["zhuhaow <zhuhaow@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.2.0-alpha.5"
hyper = "0.13.0-alpha.2"
trust-dns-resolver = "^0.12"
futures-preview = { version = "0.3.0-alpha.18", features = ["compat", "io-compat"] }
http = "^0.1"
async-trait = "^0.1"
futures-tokio-compat = { git = 'https://github.com/Nemo157/futures-tokio-compat' }
rental = "^0.5"
derive-new = "0.5"

[lib]
crate-type = ["lib", "staticlib"]

# [workspace]
# members = ["specht2"]
