[package]
name = "nekit_http_acceptor"
version = "0.1.0"
authors = ["zhuhaow <zhuhaow@gmail.com>"]
edition = "2018"

[dependencies]
nekit_http = { path = "../nekit_http" }
nekit_core = { path = "../nekit_core" }
nekit_io = { path = "../nekit_io" }
hyper = "^0.12"
futures = "^0.1"
tokio = "^0.1"

[lib]
crate-type = ["lib", "staticlib"]